--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,23 +61,10 @@
               </button> 
             </div>                      
           </div>
-        </div>    
-        
-        <div class ="row my-3">
-          <div class = "col-md-12 d-flex justify-content-center">
-          
-          <a href>Home Loan</a>
-          <a href>Auto Loan</a>
-          <a href>Educational Loan</a>
-          <a href>Auto Loan</a>
-          <a href>Home Loan</a>
-
-          </div>
-             
-        </div>  
+        </div>          
         
         <div class= "row">
-          <div class="col-md-1 p-0 m-0">
+          <div class="col-md-1 m-0">
             <a class="btn btn-primary"  style="width: 100%; margin:0;"href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"></i></a>
           </div>
           <div class="col-md-10">
@@ -171,7 +158,7 @@
 
 
           </div>
-          <div class="col-md-1 p-0 m-0">
+          <div class="col-md-1 m-0">
             <a class="btn btn-primary"  style="width: 100%; margin:0;"href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"></i></a>
           </div>                
 
