--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,41 +6,7 @@
 </head>
 
 <body>
-  <div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7">
-          <img src="/img/bhunte.png" style="width: 50px;">
-        </div>
-        <div class="col-md-5 placeholder  ">
-          <button type="button" class="btn btn-primary ml-3">Sign Up</button>
-          <button type="button" class="btn btn-primary mr-3">Log In</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <nav class="navbar navbar-expand-lg bg-primary">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="javascript:;">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="javascript:;">About Us</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <%- include('_layouts/navbar') %>
 
   <div class="custom-category">
     <div class="container">
@@ -267,20 +233,8 @@
     </section>
   </div>
 
+  <%- include('_layouts/footer') %>
 
-  <!--   Core JS Files   -->
-  <script src="/materialui/assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="/materialui/assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="/materialui/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="/materialui/assets/js/plugins/moment.min.js"></script>
-  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <script src="/materialui/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="/materialui/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-  <!-- Place this tag in your head or just before your close body tag. -->
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="/materialui/assets/js/material-kit.js?v=2.0.4" type="text/javascript"></script>
 </body>
 
 </html>
