--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -101,5 +101,79 @@ font-size: 14px;
     align-self: center;    
 }
 
+.compare-img-container{
+    width: 100%;
+    height: 60px;
+    margin-bottom: 10px;
+}
+.compare-img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.compare-apply{
+    width: 100%;    
+}
+table td{
+    width: 33.33%;    
+}
+table tr h4{
+    font-size: 20px;
+    font-weight: 900;
+    margin:0;
+}
+table tr p{
+    margin-top: 10px;
+}
+.custom-table-margin{
+    margin-top: 80px;
+}
+.custom-table-padding td{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.compare-dropdown-row{
+    width: 300px;
+}
+.compare-dropdown-img-container{
+    width: 100%;
+    height: 40px;
+}
+
+.compare-dropdown-img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.compare-dropdown{
+    background-color: #0A1A4F;
+    color:#ffffff;      
+    border-radius: 5px;
+    width: 3000px;
+    height: 50px;
+    padding : 0px 15px !important;
+    text-align: center;      
+    display:table-cell;    
+    vertical-align:middle;    
+}
+.compare-dropdown:link{
+    background-color: #0A1A4F;
+    transition-duration: 250ms;
+    color:#ffffff;
+}
+.compare-dropdown:hover{
+    background-color: #2e5fff;
+    transition-duration: 250ms;
+    color:#ffffff;
+}
+
+.terms-conditions{
+    text-align: center;
+    text-decoration: underline;
+    font-weight: 900;
+}
+
 
 
