--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <% 
 var meta = {
-  title: "Welcome to Chino Loan Website",
+  title: "Welcome to Bhunte Loan",
   author: 'Askbhunte',
   description:
     "",
@@ -50,10 +50,10 @@ var meta = {
 <link rel="shortcut icon" href="https://assets.rumsan.com/askbhunte/assets/bhunte.png" />
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link href="/materialui/assets/css/material-kit.css" rel="stylesheet" />
 <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 
 <link rel='stylesheet' href='/css/custom.css' />
