--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,20 +12,12 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-12">
           <h3 class="custom-color" style="font-weight:600; margin:0;">Choose a category</h3>
-        </div>
-        <div class="col-md-5 search-bar">
-          <div>
-            <input type="text" placeholder="Search the category">
-            <button type="submit" class="btn btn-white btn-just-icon btn-round">
-              <i class="material-icons">search</i>
-            </button>
-          </div>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-md-1 m-0">
           <a class="btn btn-primary" style="width: 100%; margin:0;" href="#multi-item-example" data-slide="prev"><i
               class="fa fa-chevron-left"></i></a>
