--- a/public/materialui/assets/css/material-kit.css
+++ b/public/materialui/assets/css/material-kit.css
@@ -3731,7 +3731,7 @@ tbody.collapse.show {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #2256ff;
+  background-color: #0C2074;
 }
 
 .dropdown-item.disabled,
@@ -4330,7 +4330,7 @@ tbody.collapse.show {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
   color: #fff;
-  background-color: #2256ff;
+  background-color: #0C2074;
 }
 
 .nav-fill .nav-item {
@@ -9574,7 +9574,7 @@ button:focus {
 
 .btn.btn-primary:hover {
   color: #fff;
-  background-color: #2256ff;
+  background-color: #0C2074;
   border-color:#0A1A4F;
 }
 
@@ -9582,8 +9582,8 @@ button:focus {
 .btn.btn-primary.focus,
 .btn.btn-primary:hover {
   color: #fff;
-  background-color:  #2256ff;
-  border-color: #2256ff;
+  background-color:  #0C2074;
+  border-color: #0C2074;
 }
 
 .btn.btn-primary:active,
@@ -15994,7 +15994,7 @@ h2.title {
 .dropdown-menu a:focus,
 .dropdown-menu a:active {
   box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(156, 39, 176, 0.4);
-  background-color: #2256ff;
+  background-color: #0C2074;
   color: #fff !important;
 }
 
