--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
         </div>
       </div>
 
-      <div class="row mt-5">
-        <div class="col-md-1 m-0">
+      <div class="row mt-3">
+        <div class="col-md-1 mt-2">
           <a class="btn btn-primary" style="width: 100%; margin:0;" href="#multi-item-example" data-slide="prev"><i
               class="fa fa-chevron-left"></i></a>
         </div>
@@ -34,77 +34,51 @@
               <div class="carousel-item active">
 
                 <div class="row">
-                  <div class="col-md-3">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Home Loan</a>
+                  <div class="col-md-4">
+                    <div class="card my-2 p-2" style="text-align: center;">
+                      <a href><i class="material-icons">home</i> Home Loan</a>
                     </div>
                   </div>
-                  <div class="col-md-3">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Auto Loan</a>
+                  <div class="col-md-4">
+                    <div class="card my-2 p-2" style="text-align: center;">
+                      <a href><i class="material-icons">
+                          directions_car</i> Auto Loan</a>
                     </div>
                   </div>
-                  <div class="col-md-3">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Educational Loan</a>
+                  <div class="col-md-4">
+                    <div class="card my-2 p-2" style="text-align: center;">
+                      <a href><i class="material-icons">
+                          school
+                        </i> Educational Loan</a>
                     </div>
                   </div>
-                  <div class="col-md-3">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Educational Loan</a>
-                    </div>
-                  </div>
+
                 </div>
 
               </div>
               <!--/.First slide-->
-
-              <!--Second slide-->
               <div class="carousel-item">
+
                 <div class="row">
                   <div class="col-md-4">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Home Loan</a>
+                    <div class="card my-2 p-2" style="text-align: center;">
+                      <a href><i class="material-icons">
+                          business</i> SME Loan</a>
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Auto Loan</a>
+                    <div class="card bg-light my-2 p-2" style="text-align: center;">
+                      <a href><i class="material-icons">money</i> Loan against Shares</a>
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Educational Loan</a>
+                    <div class="card my-2 p-2" style="text-align: center;">
+                      <a href><i class="material-icons">agriculture</i> Agriculture Loan</a>
                     </div>
                   </div>
+
                 </div>
-
               </div>
-              <!--/.Second slide-->
-
-              <!--Third slide-->
-              <div class="carousel-item">
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Home Loan</a>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Auto Loan</a>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="card my-2" style="text-align: center;">
-                      <a href>Educational Loan</a>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-              <!--/.Third slide-->
-
             </div>
             <!--/.Slides-->
 
@@ -113,7 +87,7 @@
 
 
         </div>
-        <div class="col-md-1 m-0">
+        <div class="col-md-1 mt-2">
           <a class="btn btn-primary" style="width: 100%; margin:0;" href="#multi-item-example" data-slide="next"><i
               class="fa fa-chevron-right"></i></a>
         </div>
@@ -129,7 +103,7 @@
   <div class="container">
 
     <section class="custom-category">
-      <div class="sort-bar">
+      <div class="sort-bar mt-2">
         <a class=" dropdown-toggle" href="javascript:;" id="navbarDropdownMenuLink" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Sort By
