--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -315,7 +315,7 @@
                     <button type="button" class="btn btn-primary compare-apply">Apply now</button>
                     <button type="button" class="btn btn-primary compare-apply">Learn More</button>
                     <p class="terms-conditions">
-                        <a href="#"> Terms & Conditions</a>
+                        <a href=""> Terms & Conditions</a>
                     </p>
                     
                 </td>
@@ -323,14 +323,14 @@
                     <button type="button" class="btn btn-primary compare-apply">Apply now</button>
                     <button type="button" class="btn btn-primary compare-apply">Learn More</button>
                     <p class="terms-conditions">
-                        <a href="#"> Terms & Conditions</a>
+                        <a href=""> Terms & Conditions</a>
                     </p>
                 </td>
                 <td>
                     <button type="button" class="btn btn-primary compare-apply">Apply now</button>
                     <button type="button" class="btn btn-primary compare-apply">learn More</button>
                     <p class="terms-conditions">
-                        <a href="#"> Terms & Conditions</a>
+                        <a href=""> Terms & Conditions</a>
                     </p>
                 </td>
 
