--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #ffffff !important;
+}
 .custom-color{
     color: #0A1A4F;
 }
@@ -21,14 +24,42 @@ hr{
     align-items: center;
 }
 
+.loan-container {
+    margin-bottom: 200px;
+}
+
 .custom-category a{   
     margin : 0px 20px;
-    font-weight: 700;
+    font-weight: 700;    
 }
 
 .sort-bar{
     text-align: right;
     padding : 10px 0px;
+}
+
+.compare-popup{
+    background-color: #e2e2e2;
+    padding: 0px 0 5px 0;
+}
+.compare-popup  h3{
+    font-weight: 900;
+    margin: 10px 0 10px 0;
+}
+.compare-popup a{
+    width: 100%;
+}
+.compare-footer-card h4{
+    font-weight: 400;
+}
+.compare-footer-img-container{
+    width: 60px;
+    height: 60px;
+}
+.compare-footer-img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .loan-card .row{
