--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
     </disv>
   </div>
 
-  <div class="container">
+  <div class="container loan-container">
 
     <section class="custom-category">
       <div class="sort-bar mt-2">
@@ -194,6 +194,7 @@
             </div>
           </div>
         </div>
+        <hr>
       </section>    
     </div>  
     <div id="compare-div" class="compare-popup fixed-bottom">
