compare page changes

--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -145,7 +145,8 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-4">
+        <hr>
+        <div class="row mt-5">
             <div class="col-md-4">
                 <h4 class="sub-heading">
                     Prime Home Loan
@@ -153,26 +154,30 @@
                 <div class="compare-img-container">
                     <img src="/img/primebank.png">
                 </div>
-                <button type="button" class="btn btn-primary compare-apply">Apply now</button>
-                <h4 class="sub-heading-features">
-                    Description
+                <h4 class="sub-heading-features mt-4">
+                    <i class="material-icons" style="font-size:20px;">description</i> Description
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores mollitia incidunt ipsum.
                     Dolores architecto numquam illo adipisci quam sapiente quis, optio ut odit cumque aliquam
                     possimus assumenda blanditiis! Assumenda, pariatur?
                 </p>
+                <hr />
+
                 <h4 class="sub-heading-features">
-                    Interest Rate
+                    <i class="material-icons" style="font-size:20px;">trending_up
+                    </i> Interest Rate
                 </h4>
                 <p>
-                    10%
+                    - 10%
                 </p>
+                <hr />
+
                 <h4 class="sub-heading-features">
-                    Tenure
+                    <i class="material-icons" style="font-size:20px;">date_range</i> Tenure
                 </h4>
                 <p>
-                    Upto 20 years
+                    - Upto 20 years
                 </p>
                 <button type="button" class="btn btn-primary compare-apply">Apply now</button>
                 <button type="button" class="btn btn-primary compare-apply">Learn More</button>
@@ -187,26 +192,30 @@
                 <div class="compare-img-container">
                     <img src="/img/primebank.png">
                 </div>
-                <button type="button" class="btn btn-primary compare-apply">Apply now</button>
-                <h4 class="sub-heading-features">
-                    Description
+                <h4 class="sub-heading-features mt-4">
+                    <i class="material-icons" style="font-size:20px;">description</i> Description
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores mollitia incidunt ipsum.
                     Dolores architecto numquam illo adipisci quam sapiente quis, optio ut odit cumque aliquam
                     possimus assumenda blanditiis! Assumenda, pariatur?
                 </p>
+                <hr />
+
                 <h4 class="sub-heading-features">
-                    Interest Rate
+                    <i class="material-icons" style="font-size:20px;">trending_up
+                    </i> Interest Rate
                 </h4>
                 <p>
-                    10%
+                    - 10%
                 </p>
+                <hr />
+
                 <h4 class="sub-heading-features">
-                    Tenure
+                    <i class="material-icons" style="font-size:20px;">date_range</i> Tenure
                 </h4>
                 <p>
-                    Upto 20 years
+                    - Upto 20 years
                 </p>
                 <button type="button" class="btn btn-primary compare-apply">Apply now</button>
                 <button type="button" class="btn btn-primary compare-apply">Learn More</button>
@@ -221,26 +230,30 @@
                 <div class="compare-img-container">
                     <img src="/img/primebank.png">
                 </div>
-                <button type="button" class="btn btn-primary compare-apply">Apply now</button>
-                <h4 class="sub-heading-features">
-                    Description
+                <h4 class="sub-heading-features mt-4">
+                    <i class="material-icons" style="font-size:20px;">description</i> Description
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores mollitia incidunt ipsum.
                     Dolores architecto numquam illo adipisci quam sapiente quis, optio ut odit cumque aliquam
                     possimus assumenda blanditiis! Assumenda, pariatur?
                 </p>
+                <hr />
+
                 <h4 class="sub-heading-features">
-                    Interest Rate
+                    <i class="material-icons" style="font-size:20px;">trending_up
+                    </i> Interest Rate
                 </h4>
                 <p>
-                    10%
+                    - 10%
                 </p>
+                <hr />
+
                 <h4 class="sub-heading-features">
-                    Tenure
+                    <i class="material-icons" style="font-size:20px;">date_range</i> Tenure
                 </h4>
                 <p>
-                    Upto 20 years
+                    - Upto 20 years
                 </p>
                 <button type="button" class="btn btn-primary compare-apply">Apply now</button>
                 <button type="button" class="btn btn-primary compare-apply">Learn More</button>
