--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -11,10 +11,12 @@
 
 
     <div class="container">
-        <h1 class="section_title mt-5">
-            Compare Loans from different Banks
+        <h1 class="section_title mt-5 text-center">
+            Compare loans from different banks
         </h1>
-        <div class="row mt-4">
+        <hr />
+
+        <div class="row mt-5">
             <div class="col-md-4">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle p-0 compare-dropdown" href="javascript:;"
@@ -145,7 +147,6 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="row mt-5">
             <div class="col-md-4">
                 <h4 class="sub-heading">
