--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -188,10 +188,10 @@
             </div>
             <div class="col-md-4">
                 <h4 class="sub-heading">
-                    Prime Home Loan
+                    Sunrise Home Loan
                 </h4>
                 <div class="compare-img-container">
-                    <img src="/img/primebank.png">
+                    <img src="/img/sunrisebank.jpg">
                 </div>
                 <h4 class="sub-heading-features mt-4">
                     <i class="material-icons" style="font-size:20px;">description</i> Description
@@ -226,10 +226,10 @@
             </div>
             <div class="col-md-4">
                 <h4 class="sub-heading">
-                    Prime Home Loan
+                    Siddhartha Home Loan
                 </h4>
                 <div class="compare-img-container">
-                    <img src="/img/primebank.png">
+                    <img src="/img/siddarthabank.png">
                 </div>
                 <h4 class="sub-heading-features mt-4">
                     <i class="material-icons" style="font-size:20px;">description</i> Description
