dropdown button changes

--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -24,7 +24,7 @@
                         Select to Compare
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/primesquare.png">
@@ -32,10 +32,11 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Prime Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Prime Bank</a>
                             </div>
                         </div>
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <hr class="m-0">
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/sunrisesquare.png">
@@ -43,10 +44,12 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Sunrise Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Sunrise Bank</a>
                             </div>
                         </div>
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <hr class="m-0">
+
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/siddarthasquare.png">
@@ -54,7 +57,7 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Siddartha Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Siddartha Bank</a>
                             </div>
                         </div>
                     </div>
@@ -67,7 +70,7 @@
                         Select to Compare
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/primesquare.png">
@@ -75,10 +78,11 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Prime Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Prime Bank</a>
                             </div>
                         </div>
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <hr class="m-0">
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/sunrisesquare.png">
@@ -86,10 +90,12 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Sunrise Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Sunrise Bank</a>
                             </div>
                         </div>
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <hr class="m-0">
+
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/siddarthasquare.png">
@@ -97,7 +103,7 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Siddartha Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Siddartha Bank</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +116,7 @@
                         Select to Compare
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/primesquare.png">
@@ -118,10 +124,11 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Prime Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Prime Bank</a>
                             </div>
                         </div>
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <hr class="m-0">
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/sunrisesquare.png">
@@ -129,10 +136,12 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Sunrise Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Sunrise Bank</a>
                             </div>
                         </div>
-                        <div class="row compare-dropdown-row dropdown-item" style="width: 300px;">
+                        <hr class="m-0">
+
+                        <div class="row compare-dropdown-row dropdown-item">
                             <div class="col-md-2 p-0">
                                 <div class="compare-dropdown-img-container">
                                     <img src="/img/siddarthasquare.png">
@@ -140,7 +149,7 @@
 
                             </div>
                             <div class="col-md-10">
-                                <a href="javascript:;">Siddartha Bank</a>
+                                <a href="javascript:;" class="dropdown-link">Siddartha Bank</a>
                             </div>
                         </div>
                     </div>
